--- a/simpleSpringBootJPA_V1/src/main/resources/application.properties
+++ b/simpleSpringBootJPA_V1/src/main/resources/application.properties
@@ -1,22 +1,34 @@
+#https://docs.spring.io/spring-boot/docs/current/reference/html/common-application-properties.html
 
-spring.main.banner-mode = off
+app.datasource.port = 6433
+app.datasource.database = postgres
+app.datasource.username = postgres
+app.datasource.password = password
+
+spring.main.web-environment=false
+spring.main.banner-mode=off
 
 #DB Properties
-spring.jpa.generate-ddl = true
+spring.jpa.generate-ddl=true
 spring.jpa.show-sql = true
 
 #update validate create create-drop
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = validate
 
-spring.jpa.properties.hibernate.dialect =  org.hibernate.dialect.HSQLDialect
-spring.jpa.properties.hibernate.naming_strategy = org.hibernate.cfg.DefaultNamingStrategy
-spring.datasource.url = jdbc:hsqldb:mem:test
-spring.datasource.username = sa
-spring.datasource.password = 
-spring.datasource.driver-class-name = org.hsqldb.jdbc.JDBCDriver
- 
+spring.jpa.properties.hibernate.dialect =  org.hibernate.dialect.PostgreSQL95Dialect
+spring.jpa.properties.hibernate.naming_strategy = org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.properties.hibernate.default_schema = public
 
-spring.flyway.enabled = false
+
+
+spring.flyway.enabled = true
+spring.flyway.baseline-version=1
+spring.flyway.clean-disabled=false
+spring.flyway.baseline-on-migrate = true
+spring.flyway.schemas = public 
+spring.flyway.table = schema_version
+spring.flyway.locations: classpath:db/migration 
+
 
 #Logging Configuration
 logging.file=simpleSpringBootJPA.log
