--- a/simpleSpringBootJPA_V2/src/test/resources/application-test.properties
+++ b/simpleSpringBootJPA_V2/src/test/resources/application-test.properties
@@ -1,33 +1,26 @@
+
 embeddeddb.datasource.port = 6435
 
-spring.main.web-environment=false
-spring.main.banner-mode=off
+spring.main.web-environment = false
+spring.main.banner-mode = off
 
 #DB Properties
-spring.jpa.generate-ddl=true
+spring.jpa.generate-ddl = true
 spring.jpa.show-sql = true
 
 #update validate create create-drop
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
 
-spring.jpa.hibernate.dialect =  org.hibernate.dialect.PostgreSQL94Dialect
-spring.jpa.hibernate.naming_strategy = org.hibernate.cfg.ImprovedNamingStrategy
-spring.jpa.properties.hibernate.default_schema = public
-spring.datasource.driver-class-name = org.postgresql.Driver
-spring.datasource.url = jdbc:postgresql://localhost:6435/postgres
- 
-spring.datasource.username = postgres
-spring.datasource.password = postgres
-spring.datasource.max-active=3
+spring.jpa.hibernate.dialect =  org.hibernate.dialect.HSQLDialect
+spring.jpa.hibernate.naming_strategy = org.hibernate.cfg.DefaultNamingStrategy
+spring.datasource.url = jdbc:hsqldb:mem:test
+spring.datasource.username = sa
+spring.datasource.password = 
+spring.datasource.driver-class-name = org.hsqldb.jdbc.JDBCDriver
+spring.datasource.max_active = 3 
 
-
-spring.flyway.enabled = true
-spring.flyway.baseline-version=1
-spring.flyway.clean-disabled=false
-spring.flyway.baseline-on-migrate = true
-spring.flyway.schemas = public 
-spring.flyway.table = flyway
-
+spring.flyway.enabled = false
 
 #Logging Configuration
-logging.file=simpleSpringBootJPATest.log
+logging.file=simpleSpringBootJPA.log
+
