--- a/simpleSpringBootJPA_V1/pom.xml
+++ b/simpleSpringBootJPA_V1/pom.xml
@@ -10,7 +10,7 @@
 
     
     <groupId>de.homedev.spring-boot</groupId>
-    <artifactId>simple-jpa</artifactId>
+    <artifactId>simple-jpa-v1</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 	
@@ -31,7 +31,7 @@
         </dependency>
         
   
-
+<!--  
         <dependency>
             <groupId>com.zaxxer</groupId>
             <artifactId>HikariCP</artifactId>
@@ -49,7 +49,7 @@
             <version>5.2.17.Final</version>
         </dependency>
 
-       
+ -->      
         
         
          <dependency>
