--- a/simpleSpringBootJPA_V4/build.gradle
+++ b/simpleSpringBootJPA_V4/build.gradle
@@ -1,8 +1,9 @@
 buildscript {
     ext {
-        springBootVersion = '1.5.15.RELEASE'
+        springBootVersion = '2.0.4.RELEASE'
     }
     repositories {
+	    maven { url "file:///H:/m2_repository" }
         mavenCentral()
 		maven { url "https://repo.spring.io/snapshot" }
 	    maven { url "https://repo.spring.io/milestone" }
@@ -12,28 +13,37 @@ buildscript {
     }
 }
 
+apply plugin: 'maven'
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 sourceCompatibility = 1.8
 
+group = 'de.homedev.spring-boot'
+version = '1.0.2-SNAPSHOT'
+
 repositories {
+    maven { url "file:///H:/m2_repository" }
 	mavenCentral()
 	maven { url "https://repo.spring.io/snapshot" }
 	maven { url "https://repo.spring.io/milestone" }
 }
 
+uploadArchives {
+    repositories {
+        maven { url "file:///H:/m2_repository" }
+    }
+}
+
 
 ext {
-	springStatemachineVersion = '1.5.15.RELEASE'
+	springStatemachineVersion = '2.0.2.RELEASE'
 }
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter')
-	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
-	
 }
 
 dependencyManagement {
