--- a/simpleSpringBootJMS/receiverAsListener/pom.xml
+++ b/simpleSpringBootJMS/receiverAsListener/pom.xml
@@ -33,8 +33,8 @@
         </dependency>
 
 	    <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-pool</artifactId>
         </dependency>
 		<!-- Test -->
 		<dependency>
