--- a/simpleSpringBootJMS/sender/pom.xml
+++ b/simpleSpringBootJMS/sender/pom.xml
@@ -31,10 +31,9 @@
             <groupId>org.apache.activemq</groupId>
             <artifactId>activemq-broker</artifactId>
         </dependency>
-
-	    <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-pool</artifactId>
         </dependency>
 		<!-- Test -->
 		<dependency>
