--- a/simpleSpringBootJMS/sender/src/test/resources/application-test.properties
+++ b/simpleSpringBootJMS/sender/src/test/resources/application-test.properties
@@ -1,6 +1,14 @@
-spring.activemq.broker-url: vm://embedded-broker?broker.persistent=false
-spring.activemq.user=admin
-spring.activemq.password=admin
-app.activemq.name=helloworld.q
+spring.activemq.brokerUrl = vm://embedded?broker.persistent=false,useShutdownHook=false,useJmx=false
+spring.activemq.user= admin
+spring.activemq.password= admin
+spring.activemq.inMemory = true
+spring.activemq.pooled=true
 
-logging.file=simpleSpringBootJmsSender.log
+# org.apache.activemq.ActiveMQConnectionFactory properties
+app.jms.sendTimeout=5000
+# dcb.jms.maxConnections used only if spring.activemq.pooled=true
+app.jms.maxConnections=500
+
+app.jms.mqname=helloworld.q
+
+logging.file=simpleJmsSenderTest.log
