--- a/simpleSpringBootJMS/receiverAsListener/src/main/resources/application.properties
+++ b/simpleSpringBootJMS/receiverAsListener/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.activemq.broker-url=tcp://localhost:61616
 spring.activemq.user=admin
 spring.activemq.password=admin
-app.activemq.name=helloworld.q
+app.jms.mqname=helloworld.q
 
 logging.file=simpleSpringBootJmsReciver.log
