--- a/simpleSpringBootJMS/receiverManual/pom.xml
+++ b/simpleSpringBootJMS/receiverManual/pom.xml
@@ -32,9 +32,9 @@
             <artifactId>activemq-broker</artifactId>
         </dependency>
 
-	    <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-pool</artifactId>
         </dependency>
 		<!-- Test -->
 		<dependency>
