--- a/simpleSpringBootJMS/receiverAsListener/src/test/resources/application-test.properties
+++ b/simpleSpringBootJMS/receiverAsListener/src/test/resources/application-test.properties
@@ -1,6 +1,14 @@
 spring.activemq.broker-url: vm://embedded-broker?broker.persistent=false
-spring.activemq.user=admin
-spring.activemq.password=admin
-app.activemq.name=helloworld.q
+spring.activemq.user= admin
+spring.activemq.password= admin
+spring.activemq.inMemory = false
+spring.activemq.pooled=true
+
+# org.apache.activemq.ActiveMQConnectionFactory properties
+app.jms.sendTimeout=5000
+# dcb.jms.maxConnections used only if spring.activemq.pooled=true
+app.jms.maxConnections=500
+
+app.jms.mqname=helloworld.q
 
 logging.file=simpleSpringBootJMS2Test.log
