--- a/simpleSpringBootJMS/receiverManual/src/main/resources/application.properties
+++ b/simpleSpringBootJMS/receiverManual/src/main/resources/application.properties
@@ -1,6 +1,14 @@
-spring.activemq.broker-url=tcp://localhost:61616
-spring.activemq.user=admin
-spring.activemq.password=admin
-app.activemq.name=helloworld.q
+spring.activemq.brokerUrl = tcp://localhost:61616
+spring.activemq.user= admin
+spring.activemq.password= admin
+spring.activemq.inMemory = false
+spring.activemq.pooled=true
+
+# org.apache.activemq.ActiveMQConnectionFactory properties
+app.jms.sendTimeout=5000
+# dcb.jms.maxConnections used only if spring.activemq.pooled=true
+app.jms.maxConnections=500
+
+app.jms.mqname=helloworld.q
 
 logging.file=simpleSpringBootJmsReciver.log
