--- a/simpleSpringBootJMS/sender/src/main/resources/application.properties
+++ b/simpleSpringBootJMS/sender/src/main/resources/application.properties
@@ -11,4 +11,4 @@ app.jms.maxConnections=500
 
 app.jms.mqname=helloworld.q
 
-logging.file=simpleSpringBootJMSV2.log
+logging.file=simpleJmsSender.log
