--- a/simpleSpringBootJMS/sender/docker-compose.yml
+++ b/simpleSpringBootJMS/sender/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.7'
 services:
   activemq:
     container_name: SimpleActiveMQ
-    image: webcenter/activemq:5.14.3
+    image: rmohr/activemq:5.15.6
     ports:
       - "1883:1883"   # mqtt
       - "5672:5672"   # amqp
