--- a/simpleSpringBootRestAndSwagger/client/pom.xml
+++ b/simpleSpringBootRestAndSwagger/client/pom.xml
@@ -31,6 +31,11 @@
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
         </dependency>
+        <dependency>
+           <groupId>commons-io</groupId>
+           <artifactId>commons-io</artifactId>
+           <version>2.5</version>
+        </dependency>
 
 		<!-- Test -->
 		<dependency>
